feat(articles): added some additional articles, not all are published

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
-# example netlify.toml
 [build]
-  command = "hugo"
+  command = "hugo --gc --minify"
   functions = "netlify/functions"
   publish = "public"
 
